--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,10 +1,7 @@
 [docks]
 
-dock_3="Scene,Import"
 dock_3_selected_tab_idx=0
-dock_4="FileSystem"
 dock_4_selected_tab_idx=0
-dock_5="Inspector,Node,History"
 dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
@@ -20,16 +17,20 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scene/main.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scene/Player.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scene/")
+dock_3="Scene,Import"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scene/main.tscn")
+open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/Player.tscn")
 current_scene="res://Scene/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
