--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -10,6 +10,7 @@ scenes=["res://Scene/Player.tscn", "res://Scene/main.tscn"]
 
 project_settings=Rect2(510, 412, 2400, 1400)
 create_new_node=Rect2(810, 412, 1800, 1400)
+search_help=Rect2(854, 556, 1710, 1112)
 
 [color_picker]
 
