--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scene/Player.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scene/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Road 2.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scene/", "res://Assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,14 +28,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/Player.tscn")
 current_scene="res://Scene/main.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Scripts/camera.gd", "res://Scene/player.gd"]
+selected_script="res://Scripts/camera.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
