--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,4 +1,22 @@
-[res://Scene/player.gd]
+[res://Scripts/camera.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 11,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/player.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -12,15 +30,15 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/camera.gd]
+[res://Scripts/collisionForCar.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 76,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
