--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/Player.tscn", "res://Scene/menu.tscn")
-current_scene="res://Scene/menu.tscn"
+current_scene="res://Scene/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scene/menu.gd", "res://Scene/player.gd"]
-selected_script="res://Scene/menu.gd"
+selected_script="res://Scene/player.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
