--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,4 +1,4 @@
-[res://Scene/player.gd]
+[res://Scripts/main.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -12,16 +12,44 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scene/menu.gd]
+[res://Scripts/menu.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 11,
-"row": 19,
-"scroll_position": 6.0,
+"h_scroll_position": 0,
+"row": 58,
+"scroll_position": 30.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/collisionForCar.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
