--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -11,3 +11,4 @@ scripts=["res://Scripts/collisionForCar.gd", "res://Scripts/player.gd", "res://S
 [dialog_bounds]
 
 create_new_node=Rect2(510, 190, 900, 700)
+project_settings=Rect2(360, 190, 1200, 700)
