--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -25,11 +25,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/Player.tscn", "res://Scene/menu.tscn", "res://Scene/car2.tscn")
-current_scene="res://Scene/Player.tscn"
+open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/Player.tscn", "res://Scene/menu.tscn", "res://Scene/car2.tscn", "res://Scene/car1.tscn")
+current_scene="res://Scene/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
