--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 11,
 "scroll_position": 2.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 15,
+"selection_from_line": 11,
+"selection_to_column": 20,
+"selection_to_line": 11,
 "syntax_highlighter": "GDScript"
 }
 
