--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,13 +29,13 @@ open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/Player.tscn"
 current_scene="res://Scene/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/camera.gd", "res://Scripts/collisionForCar.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/player.gd"]
-selected_script="res://Scripts/main.gd"
+selected_script="res://Scripts/player.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
