--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -6,7 +6,7 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=0
+dock_split_2=333
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=540
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/mainmenubutton.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scene/", "res://Assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,7 +25,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/Player.tscn", "res://Scene/menu.tscn", "res://Scene/car2.tscn")
+open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/Player.tscn", "res://Scene/menu.tscn", "res://Scene/car2.tscn", "res://Scene/car1.tscn")
 current_scene="res://Scene/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/camera.gd", "res://Scripts/collisionForCar.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/player.gd"]
-selected_script="res://Scripts/main.gd"
+selected_script="res://Scripts/player.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
