--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -6,7 +6,7 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=333
+dock_split_2=-191
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=540
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/camera.gd", "res://Scripts/collisionForCar.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/player.gd"]
-selected_script="res://Scripts/player.gd"
+selected_script="res://Scripts/main.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
