--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -26,3 +26,7 @@ last_selected_language="GDScript"
 
 picker_shape=3
 recent_presets=PackedColorArray(0.230315, 0.230315, 0.230315, 1, 0.231373, 0.231373, 0.231373, 0.760784, 0.197937, 0.197937, 0.197937, 0.760784)
+
+[project_settings]
+
+show_builtin_actions=false
