--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/global.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/main.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scene/", "res://Assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -35,8 +35,8 @@ selected_bottom_panel_item=1
 [ScriptEditor]
 
 open_scripts=["res://Scripts/camera.gd", "res://Scripts/canvas_layer_inputs.gd", "res://Scripts/collisionForCar.gd", "res://Scripts/global.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/player.gd"]
-selected_script="res://Scripts/global.gd"
-open_help=[]
+selected_script="res://Scripts/main.gd"
+open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
 zoom_factor=1.0
