--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 11,
-"selection_to_column": 38,
-"selection_to_line": 11,
+"row": 62,
+"scroll_position": 41.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 47,
-"scroll_position": 34.0,
+"row": 75,
+"scroll_position": 52.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,10 +87,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 2,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
