--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/delete-button.png")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/global.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scene/", "res://Assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -26,16 +26,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/Player.tscn", "res://Scene/menu.tscn", "res://Scene/car2.tscn", "res://Scene/car1.tscn")
-current_scene="res://Scene/main.tscn"
-center_split_offset=0
+current_scene="res://Scene/menu.tscn"
+center_split_offset=-491
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/camera.gd", "res://Scripts/canvas_layer_inputs.gd", "res://Scripts/collisionForCar.gd", "res://Scripts/global.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/player.gd"]
-selected_script="res://Scripts/main.gd"
+selected_script="res://Scripts/menu.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
