--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,13 +6,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
-"scroll_position": 0.0,
+"row": 83,
+"scroll_position": 67.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 2,
-"selection_to_column": 46,
-"selection_to_line": 3,
+"selection_from_line": 83,
+"selection_to_column": 44,
+"selection_to_line": 91,
 "syntax_highlighter": "GDScript"
 }
 
@@ -24,9 +24,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 103,
-"scroll_position": 0.0,
-"selection": false,
+"row": 99,
+"scroll_position": 91.3799,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 99,
+"selection_to_column": 38,
+"selection_to_line": 105,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,11 +39,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 62,
-"scroll_position": 16.0,
+"row": 46,
+"scroll_position": 47.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,11 +81,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 57,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
+"row": 38,
+"scroll_position": 30.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,10 +95,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
