--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 0.0,
+"row": 35,
+"scroll_position": 23.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 71,
-"scroll_position": 61.0,
-"selection": false,
+"row": 16,
+"scroll_position": 16.0,
+"selection": true,
+"selection_from_column": 17,
+"selection_from_line": 16,
+"selection_to_column": 21,
+"selection_to_line": 16,
 "syntax_highlighter": "GDScript"
 }
 
@@ -31,11 +35,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
+"row": 45,
+"scroll_position": 45.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
