--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -35,11 +35,11 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/camera.gd", "res://Scripts/canvas_layer_inputs.gd", "res://Scripts/collisionForCar.gd", "res://Scripts/global.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/player.gd"]
-selected_script="res://Scripts/menu.gd"
+selected_script="res://Scripts/player.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.09855
 
 [ShaderEditor]
 
