--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/Player.tscn", "res://Scene/menu.tscn", "res://Scene/car2.tscn", "res://Scene/car1.tscn")
-current_scene="res://Scene/main.tscn"
+current_scene="res://Scene/menu.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/camera.gd", "res://Scripts/canvas_layer_inputs.gd", "res://Scripts/collisionForCar.gd", "res://Scripts/global.gd", "res://Scripts/main.gd", "res://Scripts/menu.gd", "res://Scripts/player.gd"]
-selected_script="res://Scripts/camera.gd"
+selected_script="res://Scripts/menu.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
