--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 70,
-"scroll_position": 0.0,
-"selection": false,
+"row": 36,
+"scroll_position": 46.0,
+"selection": true,
+"selection_from_column": 17,
+"selection_from_line": 36,
+"selection_to_column": 18,
+"selection_to_line": 36,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,8 +25,12 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 92,
-"scroll_position": 77.1802,
-"selection": false,
+"scroll_position": 68.0,
+"selection": true,
+"selection_from_column": 25,
+"selection_from_line": 92,
+"selection_to_column": 21,
+"selection_to_line": 93,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,7 +43,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 41,
-"scroll_position": 12.0,
+"scroll_position": 50.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
