--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 98,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 130,
-"scroll_position": 139.0,
+"row": 77,
+"scroll_position": 70.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,12 +35,8 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 64,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 7,
-"selection_from_line": 64,
-"selection_to_column": 9,
-"selection_to_line": 64,
+"scroll_position": 38.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
