--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -25,12 +25,8 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 93,
-"scroll_position": 68.0,
-"selection": true,
-"selection_from_column": 25,
-"selection_from_line": 92,
-"selection_to_column": 21,
-"selection_to_line": 93,
+"scroll_position": 75.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -43,7 +39,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 41,
-"scroll_position": 34.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
